k8s/infrastructure/controllers/istio/istio-peerauthentication.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: podinfo
spec:
  mtls:
    mode: STRICT
